# donorcom

./: .coverage  .dockerignore  .env  .env.example  .gitignore  DISTRIBUTION_API_GUIDE.md  Dockerfile  NOTIFICATION_API_GUIDE.md  Procfile  README.md  SCALABLE_DASHBOARD_ARCHITECTURE.md  alembic.ini  application.py  check_associations.py  check_dist_sqlite.py  check_distributions.py  check_setup.py  check_user_facility.py  cloudbuild.yaml  db.sqlite3  db_fixtures.py  debug_dashboard_query.py  dev_credentials.txt  diagnose_tests.py  docker-compose.prod.yml  docker-compose.yml  donorcom.db  donorcom.geany  entrypoint.sh  fix_dashboard_cache.py  migrate_postgres.sh  pyproject.toml  pytest.ini  python.config  requirements.txt  run.py  run_migrations.py  run_tests.ps1  simple_test_runner.py  starter.sh  (+5 more)
.ebextensions/: 01_run_alembic.config  https-redirect.config
alembic/: env.py
alembic/versions/: 15f2d9cd6b4e_initial_tables.py  166fc3b60e19_create_tables.py  2ccb1a0febff_create_tables.py  3b8cd39fce62_verify_user_model.py  4e9ed18c5ab9_create_tables.py  4fbd0ec79d0e_create_tables.py  507465ab7b71_create_tables.py  53c0fd9f6480_verify_user_model.py  5d8f26046790_create_tables.py  5fe551a339a4_update_tables.py  6de37f22c819_initial_tables.py  6f0e22989462_create_tables.py  6fb8cc279b2e_update_tables.py  (+16 more)
app/: __init__.py  config.py  database.py  dependencies.py  lambda_handler.py  main.py
logs/: access.log.2025-08-28  access.log.2025-08-29  error.log.2025-08-28  error.log.2025-08-29  security.log.2025-08-28  security.log.2025-08-29
tasks/: reverse_address.py
tests/: README.md  __init__.py  conftest.py  test_auth_comprehensive.py  test_basic_setup.py  test_blood_request_comprehensive.py  test_email_verification.py  test_end_to_end_integration.py  test_extreme_edge_cases.py  test_facility_comprehensive.py  test_inventory_comprehensive.py  test_minimal.py  test_user_endpoints.py  test_user_schema.py  test_user_service.py  test_user_token_manager.py  user_test.py
(+107 files in other folders)
