[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Donorcom API"
version = "0.1.0"
description = "A blood distribution and management system"
dependencies = [
    "fastapi",
    "uvicorn",
    "sqlalchemy",
    # ... other dependencies
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio", 
    "httpx",
    "pytest-pythonpath"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
pythonpath = ["."]