[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "donorcom-api"
version = "0.1.0"
description = "A blood distribution and management system"
requires-python = ">=3.12"

authors = [
    { name = "Timothy Saatum", email = "timothysaatum@example.com" }
]

license = { text = "MIT" }
